<resources>
    <string name="app_name" translatable="false">SavageWorldsCompanionApp</string>
    <string name="attributes">Attributes</string>
    <string name="hindrances">Hindrances</string>
    <string name="character_info">Character Info</string>
    <string name="edges">Edges:</string>
    <string name="skills">Skills</string>
    <string name="major">Major Hindrances: </string>
    <string name="minor">Minor Hindrances: </string>
    <string name="wounds">Wounds</string>
    <string name="fatigue">Fatigue</string>
    <string name="charisma">Charisma</string>
    <string name="pace">Pace</string>
    <string name="parry">Parry</string>
    <string name="toughness">Toughness</string>
    <string name="race">Race</string>
    <string name="untrained">UT</string>
    <string name="d4">D4</string>
    <string name="d6">D6</string>
    <string name="d8">D8</string>
    <string name="d10">D10</string>
    <string name="d12">D12</string>
    <string name="attrAg">Agility</string>
    <string name="attrAgShort">Ag</string>
    <string name="attrSm">Smarts</string>
    <string name="attrSmShort">Sm</string>
    <string name="attrSp">Spirit</string>
    <string name="attrSpShort">Spirit</string>
    <string name="attrSt">Strength</string>
    <string name="attrStShort">St</string>
    <string name="attrVi">Vigor</string>
    <string name="attrViShort">Vi</string>
    <string name="boating">Boating</string>
    <string name="climbing">Climbing</string>
    <string name="driving">Driving</string>
    <string name="fighting">Fighting</string>
    <string name="gambling">Gambling</string>
    <string name="healing">Healing</string>
    <string name="intimidation">Intimidation</string>
    <string name="investigation">Investigation</string>
    <string name="lockpicking">Lockpicking</string>
    <string name="notice">Notice</string>
    <string name="persuasion">Persuasion</string>
    <string name="piloting">Piloting</string>
    <string name="repair">Repair</string>
    <string name="riding">Riding</string>
    <string name="shooting">Shooting</string>
    <string name="stealth">Stealth</string>
    <string name="streetwise">Streetwise</string>
    <string name="survival">Survival</string>
    <string name="swimming">Swimming</string>
    <string name="taunt">Taunt</string>
    <string name="throwing">Throwing</string>
    <string name="tracking">Tracking</string>
    <string name="clear">Clear</string>
    <string name="reroll">Reroll</string>
    <string name="diceExplode">Explode Dice: </string>
    <string name="wildDie">Wild Die: </string>
    <string name="modifier">Modifier: </string>
    <string name="result">Result: </string>
    <string name="rollD20">Roll D20</string>
    <string name="rollD100">Roll D100</string>
    <string name="rollAll">Roll Dice!</string>
    <string name="calculation">Calculation: </string>
    <string name="title_activity_character_creation">Character Creation</string>
    <string name="title_activity_character_view">Character View</string>
    <string name="title_activity_dice_roller">Dice Roller</string>
    <string name="attrPoints">Attribute Points Remaining:</string>
    <string name="hindPoints">Hindrance Points Remaining:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="character_attribute_fragment">Attribute Fragment</string>
    <string name="character_hindrance_fragment">Hindrance Fragment</string>
    <string name="character_skill_fragment">Skill Fragment</string>
    <string name="remaining_point_attribute">Remaining Attribute Points: </string>
    <string name="remaining_point_hindrance">Remaining Hindrance Points: </string>
    <string name="remaining_point_skill">Remaining Skill Points:</string>
    <string name="name_label">Name: </string>
    <string name="race_label">Race: </string>
    <string name="placeholder_name">Mr. T</string>
    <string name="placeholder_race">Night Elf Mohawk</string>
    <string name="num_zero">0</string>
    <string name="nameInput">Name: </string>
    <string name="raceInput">Race: </string>
    <string name="clearCharacter">Clear Character Data</string>
</resources>
