<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiceRoller">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="29">

        <LinearLayout
            android:id="@+id/switchesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_weight="1">

            <Switch
                android:id="@+id/diceRollerExplodeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/diceExplode" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/wildDie" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/modifierLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">

            <TextView
                android:id="@+id/diceRollerModifierTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/modifier" />

            <EditText
                android:id="@+id/diceRollerModifierInputBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="0"
                android:inputType="numberSigned" />
        </LinearLayout>

        <TextView
            android:id="@+id/calculation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calculation:"
            android:layout_weight="5"/>

        <LinearLayout
            android:id="@+id/resultLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="15">

            <TextView
                android:id="@+id/Result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="7"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/diceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="5"
            android:weightSum="5">

            <LinearLayout
                android:id="@+id/diceLayoutD4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:weightSum="3">

                <Button
                    android:id="@+id/diceRollerIncrementD4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/diceRollerD4TextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/d4"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/diceRollerDecrementD4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/diceLayoutD6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:weightSum="3">

                <Button
                    android:id="@+id/diceRollerIncrementD6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/diceRollerD6TextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/d6"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/diceRollerDecrementD6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/diceLayoutD8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="3"
                android:layout_weight="1">

                <Button
                    android:id="@+id/diceRollerIncrementD8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/diceRollerD8TextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/d8"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/diceRollerDecrementD8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/diceLayout10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="3"
                android:layout_weight="1">

                <Button
                    android:id="@+id/diceRollerIncrementD10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/diceRollerD10TextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/d10"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/diceRollerDecrementD10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/diceLayout12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="3"
                android:layout_weight="1">

                <Button
                    android:id="@+id/diceRollerIncrementD12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/diceRollerD12TextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/d12"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/diceRollerDecrementD12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/D20_D100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Roll D20" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Roll D100" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Clear_Reroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reroll" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>